Fri May  6 18:27:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/ctlib/ctutil.c:
	* src/dblib/dblib.c src/tds/mem.c:
	- clean tds.h header

Thu Apr 28 17:02:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c:
	- correct fix to detect tds 7.1 revision 1

Thu Apr 28 16:52:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: rollback patch for SQLTables

Thu Apr 28 14:20:24 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix for tds 7.1 revision 1 (mssql2k without SPs)

Thu Apr 28 09:54:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/tables.c: be more verbose

Mon Apr 25 13:59:52 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: use tinyint for column_type

Sun Apr 24 20:24:26 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/prepare_results.c:
	- fix problem preparing before binding parameters

Sat Apr 23 16:55:00 CDT 2011     Craig A. Berry <craigberry@mac.com>
	* vms/descrip_mms.template
	- Build more of the newer tests we weren't building.
 
Fri Apr 22 16:13:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/.cvsignore src/tds/Makefile.am src/tds/data.c:
	- avoid header name clash

Fri Apr 15 08:56:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix overriding port or instance

Wed Apr 13 22:45:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/.cvsignore doc/userguide.sgml src/tds/config.c
	- minor changes to log messages 

Tue Apr 12 11:26:29 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c 
	- bcp_send row returns FAIL if dbconvert fails to 
	- convert the bound buffer to the column datatype

Mon Apr 11 17:33:38 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/tds.h include netinet/in.h

Mon Apr 11 15:43:45 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>